# meta_graph_mcp

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  run_auth_begin.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
docker/: Dockerfile
schemas/inputs/: AdsAdsCreate.json  AdsAdsList.json  AdsAdsUpdate.json  AdsAdsetCreate.json  AdsAdsetList.json  AdsAdsetUpdate.json  AdsCampaignCreate.json  AdsCampaignList.json  AdsCampaignUpdate.json  AdsCreativeCreate.json  AssetsPageMediaList.json  AuthLoginBeginRequest.json  AuthLoginCompleteRequest.json  EventsDequeueRequest.json  GraphRequestInput.json  IgMediaCreate.json  PagePhotosCreate.json  PageVideosCreate.json  PermissionsCheckRequest.json  ResearchPublicIgMediaCommentsList.json  ResearchPublicIgMediaList.json  ResearchPublicPagesPostCommentsList.json  ResearchPublicPagesPostsList.json
schemas/responses/: AuthLoginBeginResponse.json  AuthLoginCompleteResponse.json  EventsDequeueResponse.json  GraphRequestOutput.json  PermissionsCheckResponse.json  ToolResponse.json
scripts/: generate_schemas.py
scripts/examples/: ad_library_search.py  ads_campaign_create.py  ads_insights_report.py  auth_login_flow.py  publish_ig_image.py  schedule_page_post.py
src/mcp_meta_sdk/: __init__.py  client.py
src/meta_mcp/: __init__.py  config.py  errors.py  logging.py  server.py
src/meta_mcp/auth/: __init__.py  oauth.py
src/meta_mcp/mcp_tools/: __init__.py  ads.py  assets.py  auth_login.py  common.py  core.py  insights.py  publish.py  research.py  webhooks.py
src/meta_mcp/meta_client/: __init__.py  auth.py  client.py  models.py
src/meta_mcp/sdk/: __init__.py  client.py
src/meta_mcp/storage/: __init__.py  db.py  models.py  queue.py
tests/: INTEGRATION_TESTS.md  QUICK_START_INTEGRATION.md  conftest.py  test_auth_login.py  test_client_internals.py  test_client_internals_extended.py  test_client_retries.py  test_integration_auth_instagram.py  test_integration_auth_manual.py  test_sdk.py  test_sdk_connect_simple.py  test_sdk_errors.py  test_sdk_extended.py  test_server_integration.py  test_token_service.py  test_tools_ads.py  test_tools_ads_errors.py  test_tools_assets.py  test_tools_assets_errors.py  test_tools_common.py  test_tools_core.py  test_tools_insights.py  test_tools_publish.py  test_tools_research.py  test_tools_research_errors.py  test_tools_webhooks_extended.py  test_webhooks.py
